--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   record: ^4.4.4
   audioplayers: ^4.0.1
+  flex_color_scheme: ^7.1.2
+  firebase_core: ^2.13.0
+  cloud_firestore: ^4.7.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
