--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
   google_fonts: ^4.0.4
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
