--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   google_fonts: ^4.0.4
   path_provider: ^2.0.15
+  dart_numerics: ^0.0.6
+  percent_indicator: ^4.2.3
+  syncfusion_flutter_gauges: ^21.2.8
 
 dev_dependencies:
   flutter_test:
